...
				}, label: {
					Image(systemName: "gear")
						.font(.system(size: 20))
				})
				.frame(width: 44, height: 44, alignment: .center)
				.accessibilityLabel("Settings")
				.accessibilityIdentifier("settingsButton")
				.glassEffect(.regular.interactive())
			}

			subhead
				.id("subhead")
				.font(Fonts.subhead)
...
